# assa-aurora

./: LICENSE  Makefile  README.md  Ru_assa_aurora_final_arxiv.tex
ASSA-GPU/: CITATION.cff  CMakeLists.txt  assa_aurora_final_arxiv.tex  aurora.cu
